Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.21***

***	Add SigParser->new(use_vars=>0) option to speed parsing.

****	Fix deep defines causing flex scanner overflows. [Brad Dobbie]

****	Fix preprocessing commas in deep parameterized macros. [Brad Dobbie]

****	Fix Preproc::defSubstitute not being called on parameterized macros.

****	Fix Perl 5.8.8 compile error, rt48226. [Marek Rouchal]

* Verilog::Language 3.213 2009/09/10

***	Improved warning when "do" used as identifier.

****	Fix compilation and installation on MacOS 10.4. [Robert Guenzel]

****	Fix escaped preprocessor identifiers, bug106. [Nimrod Gileadi]

****	Fix Perl 5.8.8 compile error, rt48226. [Marek Rouchal]

****	Fix Perl 5.8.0 compile error with callbackgen. [Kjeld Svendsen]

* Verilog::Language 3.212 2009/07/20

***	Fix syntax errors when using vhier/Netlist with --language 1364-2001.

****	Fix dotted expressions returning "..", bug98. [Saul Cuellar]

****	Fix Getopt::file_path to expand environment variables in filenames.

* Verilog::Language 3.211 2009/06/17

***	Add SigParser::var callbacks on struct members, bug91. [Saul Cuellar]

***	Add Preproc::defSubstitute define callbacks, bug94. [by Saul Cuellar]

****	Fix parsing empty commas in port lists, bug97.  [Noam Meir]

****	Fix compatibility with Getopt-Long-2.38, rt47030.  [by Marek Rouchal]

****	Fix compile error under GCC 3.3.5.

****	Work around compiler warning when using flex 2.5.35. [Jonathan Kimmitt]

* Verilog::Language 3.210 2009/05/19

***	`__FILE__ now expands to a string, per draft SystemVerilog 2010(ish).

***	Fix parsing external declarations using appropriate class scope.

***	Fix parsing class member variables with multiple qualifiers.

****	Fix Netlist errors with ported interfaces, bug86. [David A]
