@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***	Add SigParser->new(use_vars=>0) option to speed parsing.
 
+***	Several internal speedups to vhier and Verilog::Netlist.
+
 ****	Fix deep defines causing flex scanner overflows. [Brad Dobbie]
 
 ****	Fix preprocessing commas in deep parameterized macros. [Brad Dobbie]
